--- a/TFANet Mobile/AllGroupCellView.xib
+++ b/TFANet Mobile/AllGroupCellView.xib
@@ -47,7 +47,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{1, 1}, {671, 125}}</string>
 								<reference key="NSSuperview" ref="389860449"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="222701766"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -62,7 +61,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{135, 6}, {528, 27}}</string>
 								<reference key="NSSuperview" ref="389860449"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="803417696"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -98,7 +96,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{135, 88}, {100, 21}}</string>
 								<reference key="NSSuperview" ref="389860449"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="995320411"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -130,7 +127,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{250, 89}, {320, 21}}</string>
 								<reference key="NSSuperview" ref="389860449"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="274619077"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -151,7 +147,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{129, 35}, {528, 46}}</string>
 								<reference key="NSSuperview" ref="389860449"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="887998276"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor" id="380157823">
@@ -183,7 +178,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{15, 11}, {100, 100}}</string>
 								<reference key="NSSuperview" ref="389860449"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="344267613"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<string key="NSAntiCompressionPriority">{774, 750}</string>
@@ -199,7 +193,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 16}, {90, 90}}</string>
 								<reference key="NSSuperview" ref="389860449"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="596033317"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -210,8 +203,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{-20, 126}, {694, 12}}</string>
 								<reference key="NSSuperview" ref="389860449"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">3</int>
@@ -243,7 +234,6 @@
 						</array>
 						<string key="NSFrameSize">{674, 137}</string>
 						<reference key="NSSuperview" ref="892776081"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="135047032"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
 						<reference key="IBUIBackgroundColor" ref="380157823"/>
@@ -256,7 +246,6 @@
 				</array>
 				<string key="NSFrameSize">{674, 138}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="389860449"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="380157823"/>
@@ -414,71 +403,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">510</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">GroupCell</string>
-					<string key="superclassName">UITableViewCell</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="groupID">UILabel</string>
-						<string key="groupSummary">UITextView</string>
-						<string key="groupTitle">UILabel</string>
-						<string key="icon">UIImageView</string>
-						<string key="membercount">UILabel</string>
-						<string key="updated">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="groupID">
-							<string key="name">groupID</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="groupSummary">
-							<string key="name">groupSummary</string>
-							<string key="candidateClassName">UITextView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="groupTitle">
-							<string key="name">groupTitle</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="icon">
-							<string key="name">icon</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="membercount">
-							<string key="name">membercount</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="updated">
-							<string key="name">updated</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/GroupCell.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">GroupSearchViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">groupTableView</string>
-						<string key="NS.object.0">UITableView</string>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<string key="NS.key.0">groupTableView</string>
-						<object class="IBToOneOutletInfo" key="NS.object.0">
-							<string key="name">groupTableView</string>
-							<string key="candidateClassName">UITableView</string>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/GroupSearchViewController.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBIPadFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
